# Stomper

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  headers.txt
.github/: FUNDING.yml  dependabot.yml
.github/docs/: mkdocs.yml
.github/docs/docs/: index.en.md  index.es.md
.github/workflows/: publish-docs.yml
cmake/: ProjectDebugProfile.cmake  ProjectDependencies.cmake  ProjectEnvironment.cmake  ProjectReleaseProfile.cmake  ProjectVariables.cmake
include/: StomperInfo.h.in
launcher/: StomperLauncher.cpp
scripts/: clang_tidy.bat  clang_tidy.sh
test/: CMakeLists.txt
test/src/: ExampleTest.cpp
